--- a/aboutus.html
+++ b/aboutus.html
@@ -12,6 +12,11 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <script src="https://kit.fontawesome.com/959a4c3f11.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiffy-slider@1.6.0/dist/js/swiffy-slider.min.js" crossorigin="anonymous"
+    defer></script>
+  <link href="https://cdn.jsdelivr.net/npm/swiffy-slider@1.6.0/dist/css/swiffy-slider.min.css" rel="stylesheet"
+    crossorigin="anonymous">
+
   <title>About Us</title>
 </head>
 
@@ -109,41 +114,8 @@
         </p>
       </div>
     </div>
-    <!-- <div class="container-fluid p-0">
-      <div class="row row-cols-md-2 row-cols-1 g-0">
-        <div class="col">
-          <div class="commit-bg"
-            style="background-image: url(./img/aboutus/Collaboration\ with\ Surabaya\ Sehat\ Community\ and\ Its\ Artisans\,\ Farmers\,\ and\ Producers\ 2.jpg); object-position: 50% 20%;">
-            <div class="comit-overlay d-inline-flex p-2 align-items-end">
-              <div class="container">
-                <h1>From Community To Community</h1>
-                <h5>
-                  Collaboration is the secret ingredient in our recipe for success. At Warung Hati, we understand that
-                  thriving in business means working hand-in-hand with communities. We empower underprivileged women by
-                  offering them opportunities and enhancing their skills. When these women earn, they invest in their
-                  children's education, breaking the cycle of poverty and ensuring a brighter future, positioning them
-                  as equal providers for their families.
-                </h5>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="commit-bg" style="background-image: url(./img/Front_Page/NasiCampurBali.png);">
-            <div class="comit-overlay d-inline-flex p-2 align-items-center">
-              <div class="container text-center">
-                <h1 class="text-center">Warung Hati</h1>
-                <h5 class="text-center">The Authentic Indonesia’s Heritage Cuisine with Organic and Natural Ingredients
-                </h5>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> -->
     <!--Best Pick-->
-    <div class="mt-5">
-      <h1 class="text-center my-3">Warung Hati’s Impact Commitment </h1>
+    <!-- <div>
       <div id="hero-carousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="0" class="active" aria-current="true"
@@ -210,7 +182,7 @@
           <div class="carousel-item c-item">
             <img src="img/aboutus/Degradable Cup For Takeaway.JPG" class="d-block w-100 c-img"
               style="object-position: 50% 40% !important;" alt="Slide 4">
-            <div class="carousel-caption top-50 translate-middle-y text-start">
+              <div class="carousel-caption top-50 translate-middle-y text-start">
               <div class="animate__animated animate__fadeInLeft">
                 <h1 class="display-1 fw-bolder text-capitalize">Environmentally Responsible</h1>
                 <div class="desk-commit">
@@ -224,7 +196,7 @@
           </div>
           <div class="carousel-item c-item">
             <img src="img/aboutus/Healthy Food Education to Youngsters 1.JPG" class="d-block w-100 c-img"
-              style="object-position: 50% 90% !important;" alt="Slide 5">
+            style="object-position: 50% 90% !important;" alt="Slide 5">
             <div class="carousel-caption top-50 translate-middle-y text-start">
               <div class="animate__animated animate__fadeInLeft">
                 <h1 class="display-1 fw-bolder text-capitalize">Inclusive Pricing</h1>
@@ -240,7 +212,7 @@
           </div>
           <div class="carousel-item c-item">
             <img src="img/aboutus/Seminar about Food and Its Impact.jpg" class="d-block w-100 c-img"
-              style="object-position: 50% 90% !important;" alt="Slide 5">
+            style="object-position: 50% 90% !important;" alt="Slide 5">
             <div class="carousel-caption top-50 translate-middle-y text-start">
               <div class="animate__animated animate__fadeInLeft">
                 <h1 class="display-1 fw-bolder text-capitalize">Health and Sustainability Education</h1>
@@ -264,8 +236,195 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-    </div>
+    </div> -->
     <!--End of Best Pick-->
+
+    <h1 class="text-center my-3">Warung Hati’s Impact Commitment </h1>
+    <div
+      class="swiffy-slider slider-item-show3 slider-item-reveal slider-nav-square slider-nav-sm slider-nav-outside slider-nav-autoplay slider-nav-autopause slider-indicators-highlight slider-nav-animation slider-nav-animation-appear slider-nav-animation-fast"
+      data-slider-nav-autoplay-interval="3200">
+      <ul class=" slider-container">
+        <li class="slide-visible">
+          <div id="slide1">
+            <div class="container commit-card">
+              <div class="row">
+                <div class="col">
+                  <img src="img/aboutus/Healthy Food Donation to Orphanage.jpg" class="commit-img">
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <h1 class="commit-title d-flex align-items-center justify-content-center d-flex align-items-center justify-content-center">Inclusive Pricing</h1>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <div class="grey-line"></div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <p>We understand the concern about high prices for healthy food. By using local
+                    ingredients, we offer diverse product ranges. Our "Buy 1, Give 1" program every Friday enables
+                    customers to share healthy meals with underprivileged people, ensuring everyone can savor the
+                    goodness of healthy food</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </li>
+        <li class="slide-visible">
+          <div id="slide2">
+            <div class="container commit-card">
+              <div class="row">
+                <div class="col">
+                  <img src="img/aboutus/Healthy Food Education to Youngsters 3.jpg" class="commit-img">
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <h1 class="commit-title d-flex align-items-center justify-content-center d-flex align-items-center justify-content-center">Delicious and Healthy Meals with Balanced Proteins</h1>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <div class="grey-line"></div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <p>“Hati” means heart. It means we pour our hearts into every dish we create. Research confirms that
+                    healthy food can uplift mood, and we're dedicated to making healthy synonymous with delicious. We
+                    advocate a diet comprising 85% plant-based and 15% meat protein by meticulously choosing
+                    non-saturated fats and organic protein sources to harmonize well-being and environmental
+                    sustainability</p>
+                </div>
+              </div>
+            </div>
+        </li>
+        <li class="slide-visible">
+          <div id="slide3">
+            <div class="container commit-card">
+              <div class="row">
+                <div class="col">
+                  <img
+                    src="img/aboutus/Collaboration with Surabaya Sehat Community and Its Artisans, Farmers, and Producers 2.jpg"
+                    class="commit-img">
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <h1 class="commit-title d-flex align-items-center justify-content-center d-flex align-items-center justify-content-center">From Community To Community</h1>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <div class="grey-line"></div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <p>Collaboration is the secret ingredient in our recipe for success. At Warung Hati, we understand
+                    that thriving in business means working hand-in-hand with communities. We empower underprivileged
+                    women by offering them opportunities and enhancing their skills. When these women earn, they invest
+                    in their children's education, breaking the cycle of poverty and ensuring a brighter future,
+                    positioning them as equal providers for their families</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </li>
+        <li class="">
+          <div id="slide4">
+            <div class="container commit-card">
+              <div class="row">
+                <div class="col">
+                  <img src="img/aboutus/Our Partner Organic Farmer From Sidoarjo.jpeg" class="commit-img">
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <h1 class="commit-title d-flex align-items-center justify-content-center d-flex align-items-center justify-content-center">Empowering Local Producers</h1>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <div class="grey-line"></div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <p>Farm to table. We are proudly using 100% indigenous and natural ingredients from local nearby
+                    farmers and producers across Indonesia. Brown rice from Banyuwangi, vegetables from Mojokerto, and
+                    sea salt from Bali, we bring all the goodness from all around Indonesia’s archipelago. Organic
+                    ingredients are preferred whenever possible</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </li>
+        <li class="">
+          <div id="slide5">
+            <div class="container commit-card">
+              <div class="row">
+                <div class="col">
+                  <img src="img/aboutus/Degradable Cup For Takeaway.JPG" class="commit-img">
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <h1 class="commit-title d-flex align-items-center justify-content-center">Environmentally Responsible</h1>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <div class="grey-line"></div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <p>Nourishing the body while saving the world is our pledge. We utilize all-natural, biodegradable
+                    products in our operations, from cassava-based takeaway bags to eco-friendly dishwashing liquid. We
+                    also encourage customers to bring their containers</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </li>
+        <li class="">
+          <div id="slide6">
+            <div class="container commit-card">
+              <div class="row">
+                <div class="col">
+                  <img src="img/aboutus/Seminar about Food and Its Impact.jpg" class="commit-img">
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <h1 class="commit-title d-flex align-items-center justify-content-center">Health and Sustainability Education</h1>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <div class="grey-line"></div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <p>The future of our planet rests in the hands of today's and the next generation. We nurture the
+                    value of health and sustainability through engaging educational experiences for them. From the
+                    vibrant farmer's markets to hands-on cooking classes and inspiring campaigns promoting wholesome
+                    local food, we savor knowledge and embrace healthier, more sustainable living</p>
+                </div>
+              </div>
+            </div>
+        </li>
+      </ul>
+
+      <button type="button" class="slider-nav"></button>
+      <button type="button" class="slider-nav slider-nav-next"></button>
+    </div>
+
   </div>
   <!--Footer-->
   <footer class="footer pt-3">
