--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
   <!--Quick About us-->
   <div class="container my-5">
-    <div class="row">
-      <div class="col-md-6 g-0 text-center">
+    <div class="row g-0">
+      <div class="col-md-6 text-center">
         <img src="img/Menu_Utama/Gado-Gado 3.png" style="object-position: 65%;" class="img-rest">
         <img src="img/5. Ala Carte/Sayur/Sayur Asem.png" class="img-rest-2">
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6 align-self-center">
         <div class="container mt-3 mt-md-0">
           <h1 class="welcome-index text-start">Welcome to your life-changing journey </h1>
           <p class="capt-index text-start mt-6 mt-md-4"> Experience the authentic taste of Indonesia's cultural heritage
