--- a/menu.html
+++ b/menu.html
@@ -83,8 +83,8 @@
   <!--Tabs of category-->
   <div class="abouthead" style="background-image: url(./img/Front_Page/NasiCampurBali.png);">
     <div class="abouthead-overlay d-inline-flex p-2 align-items-center">
-      <div class="container w-75 text-center ">
-        <h1 class="text-center">Our Greatest Creation</h1>
+      <div class="container text-center ">
+        <h1 class="text-center">Warung Hati Greatest Creation</h1>
         <div class="container mt-3">
           <ul class="nav nav-colorfirst justify-content-center mt-3 " id="Food-Tab">
             <li class="nav-item">
